<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_device_address"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_state"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_data"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/data_value"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/no_data"
                  android:textSize="18sp"/>
    </LinearLayout>

    <ExpandableListView android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/work_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/work_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idle"
            android:textSize="32dp"
            android:textColor="@android:color/holo_blue_light"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start"/>

            <Button
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop"/>

            <Button
                android:id="@+id/mode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mode"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/strength_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:textSize="40dp"
                android:text="+" />

            <Button
                android:id="@+id/strength_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:textSize="40dp"
                android:text="-" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>